# Restaurante---Imperativo

./: .gitignore  CMakeLists.txt  README.md  Structs.h  build.sh  client_app  main.cpp  network_client  network_client.cpp  network_client.h  network_server  network_server.cpp
client/: client_app.cpp  client_logic.cpp  client_logic.h  client_ui.cpp  client_ui.h  network_client.cpp  network_client.h
server/: app.cpp  config.cpp  network_server.cpp  network_server.h  order_manager.cpp  order_manager.h  orders_ui.cpp  orders_ui.h  product_manager.cpp  product_manager.h  products_ui.cpp  products_ui.h  server_app.cpp  table_numbers_ui.cpp  table_numbers_ui.h
server/handlers/: order_handler.cpp  order_handler.h  product_handler.cpp  product_handler.h
shared/: Mensajes.h  json_utils.cpp  json_utils.h  models.h
